# brain2

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LEGAL.md  LICENSING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md
backend/: .env.example  config.yaml  pyproject.toml  pyrightconfig.json
backend/br8n/: config.py  constants.py  preamble_cache.py
backend/br8n/agent/: preamble.py  resume.py  session_primer.py  state.py  synopsis.py
backend/br8n/api/: activity.py  apple_auth.py  auth.py  capture.py  chat.py  explore.py  health.py  main.py  projects.py  (+1 more)
backend/brain2/: config.py
backend/tests/: test_activity_extract.py  test_activity_flow.py  test_activity_threading.py  test_api_auth.py  test_api_read_surfaces.py  test_apple_auth.py  test_chat.py  test_config_concept.py  test_distill_flow.py  test_distill_reconcile.py  test_distill_synthesize.py  test_distill_tool.py  test_engine_local.py  test_isolation_cloud.py  test_journal_search.py  test_journal_tool.py  test_kg_org_scoping.py  test_kg_store_sqlite.py  test_livingdocs_config.py  test_livingdocs_distill.py  test_livingdocs_drift.py  test_livingdocs_fallback.py  test_livingdocs_notes.py  test_livingdocs_paths.py  test_livingdocs_policy.py  test_livingdocs_state.py  test_livingdocs_watch.py  test_match_findings_global.py  test_note_tool.py  test_policy_tools.py  test_preamble_cache.py  test_principal.py  test_principal_auth.py  test_resolve_tenant_principal.py  test_resume_core.py  test_session_primer.py  test_store_org_threading.py  test_store_selection.py  test_store_sqlite.py  test_store_supabase.py  (+6 more)
(+250 files in other folders)
