[project]
name = "br8n-backend"
version = "0.1.0"
description = "br8n — self-contained context-capture and resume engine."
license = "MIT"
authors = [{ name = "Anthony Suherli" }]
requires-python = ">=3.11"

dependencies = [
  # Web
  "fastapi>=0.122.0",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "pyyaml>=6.0.3",
  "httpx>=0.28.1",

  # Agent / synopsis rebuild
  "langchain-core>=1.4.0",
  "langchain-anthropic>=1.4.3",
  "anthropic>=0.104.1",

  # Storage / auth
  "supabase>=2.28.3",
  "asyncpg>=0.31.0",
  "pyjwt[crypto]>=2.10.1",
  "argon2-cffi>=25.1.0",
  "python-multipart>=0.0.20",

  # Embeddings + AI Gateway (exploration pipeline)
  "openai>=2.30.0",

  # Phase 3 gap-fill
  "tavily-python>=0.7.23",

  # MCP server
  "mcp>=1.16.0",

  # Resume card HTML templating
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1",
  "ruff>=0.12.0",
  "pyright>=1.1.409",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["br8n*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires a live local Supabase stack"]
